# credmark-models-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  credmark  credmark_dev_console.yaml  debts.xlsx  df.csv  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_model.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: engineering-issue-template.md
.github/workflows/: deploy.yml  production.yml  staging.yml  test.yml
models/: tmp_abi_lookup.py  uniswap_v3_fee.md
models/algorithmic/: var.py
models/credmark_stats/: circulating_supply_cmk.py  circulating_supply_cmk.yaml  launch_date_cmk.py  launch_date_cmk.yaml  total_supply_cmk.py  total_supply_cmk.yaml
models/dtos/: chainlink_code.yaml  example.py  historical.py  pool.py  price.py  tradeable.py  tvl.py  volume.py
models/examples/: 02_dto_examples.py  03_address_examples.py  04_account_examples.py  05_contract_examples.py  06_token_examples.py  07_ledger_examples.py  08_blocknumber_examples.py  09_run_example.py  12_iteration_examples.py  account_examples.py  address_examples.py  block_time_example.py  blocknumber_examples.py  blocktime_example.py  blocktime_examples.py  contract_examples.py  dto_examples.py  dtos.py  e_01_model.py  e_02_dto.py  e_03_address.py  e_04_account.py  e_05_contract.py  e_06_token.py  e_07_ledger.py  e_08_blocknumber.py  e_09_run.py  e_11_historical.py  e_12_iteration.py  echo.py  (+19 more)
notebook/: README.md  creditcoop.ipynb  demo-account.ipynb  demo-ledger.ipynb  demo-model.ipynb  demo-price.ipynb  demo.ipynb  demo.py  lvr.ipynb  nft.ipynb  rain.ipynb
script/: console_init.py
test/: cli.py  cluster-start.py  cmf_test.py  cmk_test.py  google_bigquery.md  model-api.md  no_test_avalanche.py  plan_batch.sh  reg_test.ps1  run.py  run.sh  run_all_examples.sh  run_test.sh  test.ps1  test.py  test_aave.py  test_aave.sh  test_aave_v3.py  test_account.py  test_account_token.sh  test_arbitrum.py  test_avalanche.py  test_balancer.py  test_bsc.py  test_chainlink.py  test_chainlink.sh  test_cmk.py  test_cmk.sh  test_common.sh  test_compose.py  test_compose.sh  test_compound.py  test_compound.sh  test_curve.py  test_curve.sh  test_dashboard.py  test_dashboard.sh  test_example.py  test_examples.sh  test_fantom.py  (+32 more)
(+275 files in other folders)
