[tool.poetry]
name = "credmark-models-py"
version = "1.0.1"
description = ""
authors = []
license = "MIT"
packages = [{ include = "models" }]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
credmark-model-framework = { git = "https://github.com/credmark/credmark-model-framework-py.git", tag = "0.8.71" }
numpy = ">=1.21.0"
matplotlib = ">=3.5.1"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
statsmodels = ">=0.13.0"
xlrd = ">=2.0.1"
XlsxWriter = ">=3.0.3"
beautifulsoup4 = ">=4.10.0"
pyarrow = ">=7.0.0"
networkx = ">=2.8.4"

[tool.poetry.dev-dependencies]
autopep8 = "1.6.0"
pycodestyle = "2.8.0"
pylint = "2.13.2"
concurrencytest = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
