[tool.poetry]
name = "credmark-models-py"
version = "1.0.1"
description = ""
authors = []
license = "MIT"
packages = [{ include = "models" }]

[tool.poetry.dependencies]
python = ">=3.11"
credmark-model-framework = { git = "https://github.com/credmark/credmark-model-framework-py.git", tag = "0.8.129" }
ipfshttpclient = ">=0.8.0a2"
matplotlib = ">=3.7.1"
networkx = ">=3.1"
numpy = ">=1.21.0"
numpy_financial = ">=1.0.0"
pyarrow = ">=12.0.1"
pyxirr = ">=0.9.2"
scipy = ">=1.11.1"
statsmodels = ">=0.14.0"
xlrd = ">=2.0.1"
xlsxwriter = ">=3.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "==2.0.2"
pycodestyle = "==2.10.0"
pylint = "==2.17.4"
concurrencytest = ""
tqdm = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
